--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "@vonage/server-sdk": "^3.7.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.2.8",
