--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb://127.0.0.1:27017/reactnativesignup?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+1.8.0
+account_Sid=ACe8ee2275d1d0ce5eb37bda4d339991d8
+auth_Token=ec00910b4ef436b0af74ee69cb10ffd1
