--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nexmo": "^2.9.1",
     "nodemailer": "^6.9.4",
     "otp-generator": "^4.0.1",
+    "serverless-http": "^3.2.0",
     "twilio": "^4.14.1"
   }
 }
