--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/reactnativesignup?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+1.8.0
+MONGODB_URI=mongodb+srv://nishchalanand70:fWaSmPEGdiDbTZAy@cluster0.igtznkc.mongodb.net/reactnativesignup
 account_Sid=ACe8ee2275d1d0ce5eb37bda4d339991d8
-auth_Token=ec00910b4ef436b0af74ee69cb10ffd1
+auth_Token=bd0fe29ac12ffd556b01cd95c46dbeb3
