--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "scripts": {
     "start": "node index.js"
   },
+  "build": {
+    "command":"npm run build",
+    "functions":"functions"
+  },
   "dependencies": {
     "@vonage/server-sdk": "^3.7.2",
     "bcrypt": "^5.1.0",
