--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://nishchalanand70:fWaSmPEGdiDbTZAy@cluster0.igtznkc.mongodb.net/reactnativesignup
+MONGODB_URI=mongodb+srv://nishchalanand70:fWaSmPEGdiDbTZAy@cluster0.igtznkc.mongodb.net/
 account_Sid=ACe8ee2275d1d0ce5eb37bda4d339991d8
 auth_Token=bd0fe29ac12ffd556b01cd95c46dbeb3
